# algorithmic-languages-project-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp
battleships/: console_printable.h  container_util.h  coordinate.h  direction.h  game.h  game_configuration.h  game_field.h  game_field_cell.h  rival_bot.h  ship_position.h  simple_game.h  simple_game_field.cpp  simple_game_field.h  simple_rival_bot.cpp  simple_rival_bot.h
game/: console_printable.h  coordinate.h  direction.h  game.h  game_configuration.h  game_field.h  simple_game_field.cpp  simple_game_field.h
util/: cli_util.cpp  cli_util.h
